# JCMwave_modeling

./: README.md  pyproject.toml
.cursor/hooks/state/: continual-learning.json
JCM_clean/: grid.jcm
JCM_clean/project_results/: computational_costs.jcm  fieldbag.jcm  fieldbag_near_field_xy.jcm  ft.jcm
notbooks/: start.ipynb
notbooks/JCMfolder_test/: layout.jcm  project.jcmp  sources.jcmt
notbooks/JCMfolder_test/project_results/: computational_costs.jcm  ft.jcm
notebooks/: ComputationalDomain_shape.json  create_geometry.ipynb  geometry_shapes.json  helper.py  optimization.ipynb  start.ipynb
notebooks/JCMfolder_test/: grid.jcm  layout.jcm  materials.jcm  materials.jcmt  project.dependency.jcmp  project.jcmp  project.jcmpt  sources.jcm  sources.jcmt
notebooks/JCMfolder_test/project_results/: computational_costs.jcm  fieldbag_near_field_xy.jcm  ft.jcm
notebooks/test_data/: forward_model_results_test.csv
src/JCM_models/: ShapeGenerator.py  __init__.py  filewriters.py  model.py  utils.py
