[project]
name = "JCM_models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "find-jcmwave>=1.0.2",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "periodictable>=2.1.0",
    "pint>=0.25.3",
    "scipy>=1.17.1",
]

# hatch build system for simplicity
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
